màj incrémenteargent() afin qu'elle prenne en compte la vraie variable argent de l'entreprise. Création fonction acheteressources(). Création listener pour permettre l'achat de 5 ressources.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2896,10 +2896,9 @@
                 android:id="@+id/RelativeLayoutDetailsRessources"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorBackgroundRelativeLayoutEmployes"
                 android:layout_marginTop="40dp"
                 android:alpha="0.9"
-                android:visibility="gone">
+                android:background="@color/colorBackgroundRelativeLayoutEmployes">
 
                 <RelativeLayout
                     android:id="@+id/RelativeLayoutContentDetailRessources"
@@ -2943,50 +2942,50 @@
                         android:id="@+id/RelativeLayoutRessources2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_toEndOf="@+id/RelativeLayoutBackButtonDetailRessources"
                         android:layout_below="@+id/RelativeLayoutRessourcesTitle"
+                        android:layout_marginEnd="10dp"
                         android:layout_marginStart="5dp"
-                        android:layout_marginEnd="10dp">
+                        android:layout_marginTop="5dp"
+                        android:layout_toEndOf="@+id/RelativeLayoutBackButtonDetailRessources">
 
                         <ProgressBar
                             android:id="@+id/ProgressBarNiveauRessources"
                             style="@android:style/Widget.ProgressBar.Horizontal"
-                            android:progressDrawable="@drawable/custom_progress_bar_securite_informatique"
                             android:layout_width="match_parent"
                             android:layout_height="25dp"
-                            android:layout_marginStart="8dp"
+                            android:layout_centerVertical="true"
                             android:layout_marginEnd="12dp"
+                            android:layout_marginStart="8dp"
+                            android:alpha="1"
                             android:indeterminate="false"
                             android:indeterminateTintMode="src_atop"
-                            android:layout_centerVertical="true"
                             android:max="100"
                             android:progress="63"
-                            android:alpha="1"/>
+                            android:progressDrawable="@drawable/custom_progress_bar_securite_informatique" />
 
                         <TextView
                             android:id="@+id/TextViewNiveauRessources"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignEnd="@+id/ProgressBarNiveauRessources"
+                            android:layout_centerVertical="true"
                             android:layout_marginEnd="10dp"
                             android:text="@string/niveau_reputation"
-                            android:layout_centerVertical="true"
                             android:textColor="@color/colorNiveauSecuriteInformatique"
-                            android:textSize="15sp"/>
+                            android:textSize="15sp" />
                     </RelativeLayout>
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="40dp"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginStart="40dp"
-                        android:layout_marginEnd="40dp"
-                        android:layout_marginBottom="5dp"
+                        android:layout_alignEnd="@+id/RelativeLayoutRessources2"
                         android:layout_alignStart="@+id/RelativeLayoutRessources2"
                         android:layout_below="@+id/RelativeLayoutRessources2"
-                        android:layout_alignEnd="@+id/RelativeLayoutRessources2">
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginTop="40dp">
 
                         <RelativeLayout
                             android:id="@+id/RelativeLayoutContentPremiereRessources"
@@ -2998,57 +2997,57 @@
                                 android:id="@+id/RelativeLayoutPremiereRessources"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:alpha="0.9"
+                                android:background="@drawable/custom_relative_layout_ressources"
                                 android:clickable="true"
                                 android:focusable="true"
-                                android:background="@drawable/custom_relative_layout_ressources"
-                                android:paddingStart="15dp"
-                                android:paddingEnd="15dp"
-                                android:paddingTop="10dp"
                                 android:paddingBottom="10dp"
-                                android:alpha="0.9">
+                                android:paddingEnd="15dp"
+                                android:paddingStart="15dp"
+                                android:paddingTop="10dp">
 
                                 <TextView
                                     android:id="@+id/TextViewNombrePremiereRessources"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
                                     android:text="@string/premiereRessources"
-                                    android:textSize="35sp"
-                                    android:layout_centerVertical="true"/>
+                                    android:textSize="35sp" />
 
                                 <ImageView
                                     android:id="@+id/ImageViewPremiereRessources"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_toEndOf="@+id/TextViewNombrePremiereRessources"
-                                    android:layout_marginStart="10dp"
-                                    android:src="@drawable/ressources"
                                     android:layout_centerVertical="true"
-                                    android:alpha="1"/>
+                                    android:layout_marginStart="10dp"
+                                    android:layout_toEndOf="@+id/TextViewNombrePremiereRessources"
+                                    android:alpha="1"
+                                    android:src="@drawable/ressources" />
                             </RelativeLayout>
 
                             <RelativeLayout
                                 android:id="@+id/RelativeLayoutPrixPremiereRessources"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
+                                android:layout_below="@+id/RelativeLayoutPremiereRessources"
                                 android:layout_centerHorizontal="true"
-                                android:layout_below="@+id/RelativeLayoutPremiereRessources">
+                                android:layout_marginTop="10dp">
 
-                                <ImageView
+                                <ImageButton
                                     android:id="@+id/ImageViewArgentPremiereRessource"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:src="@drawable/argent"/>
+                                    android:src="@drawable/argent" />
 
                                 <TextView
                                     android:id="@+id/TextViewArgentPremiereRessource"
-                                    android:layout_toEndOf="@+id/ImageViewArgentPremiereRessource"
-                                    android:layout_marginStart="10dp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_toEndOf="@+id/ImageViewArgentPremiereRessource"
                                     android:text="@string/argentPremiereRessources"
-                                    android:textSize="35sp"
-                                    android:layout_centerVertical="true"/>
+                                    android:textSize="35sp" />
                             </RelativeLayout>
                         </RelativeLayout>
 
@@ -3056,64 +3055,64 @@
                             android:id="@+id/RelativeLayoutContentDeuxiemeRessources"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="55dp"
                             android:layout_marginBottom="30dp"
+                            android:layout_marginStart="55dp"
                             android:layout_toEndOf="@+id/RelativeLayoutContentPremiereRessources">
 
                             <RelativeLayout
                                 android:id="@+id/RelativeLayoutDeuxiemeRessources"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:alpha="0.9"
+                                android:background="@drawable/custom_relative_layout_ressources"
                                 android:clickable="true"
                                 android:focusable="true"
-                                android:background="@drawable/custom_relative_layout_ressources"
-                                android:paddingStart="15dp"
-                                android:paddingEnd="15dp"
-                                android:paddingTop="10dp"
                                 android:paddingBottom="10dp"
-                                android:alpha="0.9">
+                                android:paddingEnd="15dp"
+                                android:paddingStart="15dp"
+                                android:paddingTop="10dp">
 
                                 <TextView
                                     android:id="@+id/TextViewNombreDeuxiemeRessources"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
                                     android:text="@string/deuxiemeRessources"
-                                    android:textSize="35sp"
-                                    android:layout_centerVertical="true"/>
+                                    android:textSize="35sp" />
 
                                 <ImageView
                                     android:id="@+id/ImageViewDeuxiemeRessources"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_toEndOf="@+id/TextViewNombreDeuxiemeRessources"
+                                    android:layout_centerVertical="true"
                                     android:layout_marginStart="10dp"
-                                    android:src="@drawable/ressources"
-                                    android:layout_centerVertical="true"/>
+                                    android:layout_toEndOf="@+id/TextViewNombreDeuxiemeRessources"
+                                    android:src="@drawable/ressources" />
                             </RelativeLayout>
 
                             <RelativeLayout
                                 android:id="@+id/RelativeLayoutPrixDeuxiemeRessources"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
+                                android:layout_below="@+id/RelativeLayoutDeuxiemeRessources"
                                 android:layout_centerHorizontal="true"
-                                android:layout_below="@+id/RelativeLayoutDeuxiemeRessources">
+                                android:layout_marginTop="10dp">
 
-                                <ImageView
+                                <ImageButton
                                     android:id="@+id/ImageViewArgentDeuxiemeRessource"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:src="@drawable/argent"/>
+                                    android:src="@drawable/argent" />
 
                                 <TextView
                                     android:id="@+id/TextViewArgentDeuxiemeRessource"
-                                    android:layout_toEndOf="@+id/ImageViewArgentDeuxiemeRessource"
-                                    android:layout_marginStart="10dp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_toEndOf="@+id/ImageViewArgentDeuxiemeRessource"
                                     android:text="@string/argenteDeuxiemeRessources"
-                                    android:textSize="35sp"
-                                    android:layout_centerVertical="true"/>
+                                    android:textSize="35sp" />
                             </RelativeLayout>
                         </RelativeLayout>
 
@@ -3121,24 +3120,24 @@
                             android:id="@+id/RelativeLayoutContenTroisiemeRessources"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
                             android:layout_alignParentTop="true"
                             android:layout_marginStart="50dp"
-                            android:layout_toEndOf="@+id/RelativeLayoutContentDeuxiemeRessources"
-                            android:layout_alignParentEnd="true">
+                            android:layout_toEndOf="@+id/RelativeLayoutContentDeuxiemeRessources">
 
                             <RelativeLayout
                                 android:id="@+id/RelativeLayoutTroisiemeRessources"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:alpha="0.9"
                                 android:background="@drawable/custom_relative_layout_ressources"
                                 android:clickable="true"
                                 android:focusable="true"
-                                android:layout_centerHorizontal="true"
-                                android:paddingStart="15dp"
-                                android:paddingEnd="15dp"
-                                android:paddingTop="10dp"
                                 android:paddingBottom="10dp"
-                                android:alpha="0.9">
+                                android:paddingEnd="15dp"
+                                android:paddingStart="15dp"
+                                android:paddingTop="10dp">
 
                                 <TextView
                                     android:id="@+id/TextViewNombreTroisiemeRessources"
@@ -3155,7 +3154,7 @@
                                     android:layout_centerVertical="true"
                                     android:layout_marginStart="10dp"
                                     android:layout_toEndOf="@+id/TextViewNombreTroisiemeRessources"
-                                    android:src="@drawable/ressources"/>
+                                    android:src="@drawable/ressources" />
                             </RelativeLayout>
 
                             <RelativeLayout
@@ -3166,12 +3165,12 @@
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginTop="10dp">
 
-                                <ImageView
+                                <ImageButton
                                     android:id="@+id/ImageViewArgentTroisiemeRessource"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:src="@drawable/argent"
-                                    android:layout_centerVertical="true"/>
+                                    android:layout_centerVertical="true"
+                                    android:src="@drawable/argent" />
 
                                 <TextView
                                     android:id="@+id/TextViewArgentTroisiemeRessource"
