--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2898,7 +2898,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:alpha="0.9"
-                android:background="@color/colorBackgroundRelativeLayoutEmployes">
+                android:background="@color/colorBackgroundRelativeLayoutEmployes"
+                android:visibility="invisible">
 
                 <RelativeLayout
                     android:id="@+id/RelativeLayoutContentDetailRessources"
