--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2899,7 +2899,7 @@
                 android:layout_marginTop="40dp"
                 android:alpha="0.9"
                 android:background="@color/colorBackgroundRelativeLayoutEmployes"
-                android:visibility="invisible">
+                android:visibility="gone">
 
                 <RelativeLayout
                     android:id="@+id/RelativeLayoutContentDetailRessources"
@@ -3195,8 +3195,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            android:visibility="gone">
+            android:layout_marginBottom="10dp">
 
             <RelativeLayout
                 android:id="@+id/RelativeLayoutArgent"
