--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -176,7 +176,7 @@
                     android:paddingEnd="10dp"
                     android:paddingStart="10dp"
                     android:paddingTop="10dp"
-                    android:text="NIVEAU 10"
+                    android:text="NIVEAU 1"
                     android:textColor="@color/fontColor"
                     android:textSize="15sp" />
             </RelativeLayout>
@@ -1388,11 +1388,12 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textColor="@color/colorNomAntivirus"
-                                    android:text="@string/nomAntivirus"
+                                    android:layout_centerHorizontal="true"
+                                    android:text="Aviro v1.1"
                                     android:textSize="12sp"
                                     android:layout_marginStart="20dp"/>
 
-                                <TextView
+                                <!--<TextView
                                     android:id="@+id/TextViewVersionAntivirus"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -1401,7 +1402,7 @@
                                     android:text="@string/versionAntivirus"
                                     android:textSize="12sp"
                                     android:layout_marginStart="10dp"
-                                    android:layout_marginEnd="20dp"/>
+                                    android:layout_marginEnd="20dp"/>-->
                             </RelativeLayout>
 
                             <ImageButton
@@ -1450,7 +1451,7 @@
                                 android:background="@color/colorBackgroundRelativeLayoutEmployes"
                                 android:src="@drawable/up" />
 
-                            <ImageView
+                            <!--<ImageView
                                 android:id="@+id/ImageViewArgentFirewall"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -1467,14 +1468,14 @@
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="10dp"
                                 android:layout_toEndOf="@+id/ImageViewArgentFirewall"
-                                android:textSize="25sp"/>
+                                android:textSize="25sp"/>-->
 
                             <TextView
                                 android:id="@+id/TextViewDerniereMiseAJour"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/derniereMiseAJour"
-                                android:layout_toEndOf="@+id/TextViewArgentFirewall"
+                                android:text="derniere maj : "
+                                android:layout_toEndOf="@+id/ImageButtonUpFirewall"
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="30dp"
                                 android:textSize="25sp"/>
@@ -1483,7 +1484,7 @@
                                 android:id="@+id/TextViewHeureDerniereMiseAJour"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/heureMiseAJourFirewall"
+                                android:text="pas encore effectuee"
                                 android:layout_toEndOf="@+id/TextViewDerniereMiseAJour"
                                 android:layout_marginStart="5dp"
                                 android:layout_centerVertical="true"
@@ -1520,7 +1521,7 @@
                                 android:id="@+id/TextViewMiseAJourSysteme"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/miseAJourSysteme"
+                                android:text="MAJ SYSTEME"
                                 android:textSize="25sp"
                                 android:layout_centerVertical="true"/>
 
@@ -1534,7 +1535,7 @@
                                 android:background="@color/colorBackgroundRelativeLayoutEmployes"
                                 android:src="@drawable/up" />
 
-                            <ImageView
+                            <!--<ImageView
                                 android:id="@+id/ImageViewArgentMiseAJourSysteme"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -1551,14 +1552,14 @@
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="10dp"
                                 android:layout_toEndOf="@+id/ImageViewArgentMiseAJourSysteme"
-                                android:textSize="25sp"/>
+                                android:textSize="25sp"/>-->
 
                             <TextView
                                 android:id="@+id/TextViewDerniereMiseAJourSysteme"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/derniereMiseAJour"
-                                android:layout_toEndOf="@+id/TextViewArgentMiseAJourSysteme"
+                                android:text="derniere maj : "
+                                android:layout_toEndOf="@+id/ImageButtonUpMiseAJourSysteme"
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="30dp"
                                 android:textSize="25sp"/>
@@ -1567,7 +1568,7 @@
                                 android:id="@+id/TextViewHeureDerniereMiseAJourSysteme"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/heureMiseAJourSysteme"
+                                android:text="pas encore effectuee"
                                 android:layout_toEndOf="@+id/TextViewDerniereMiseAJourSysteme"
                                 android:layout_marginStart="5dp"
                                 android:layout_centerVertical="true"
@@ -1648,7 +1649,7 @@
                                 android:layout_centerVertical="true"
                                 android:layout_toEndOf="@+id/TextViewArgentFormationEmployes"
                                 android:max="100"
-                                android:progress="65"
+                                android:progress="50"
                                 android:alpha="1"/>
 
                             <ImageButton
@@ -1711,7 +1712,7 @@
                                 android:id="@+id/TextViewArgentSousTraiter"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/textMIseAJourSysteme"
+                                android:text="500"
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="10dp"
                                 android:layout_toEndOf="@+id/ImageViewArgentSousTraiter"
@@ -1978,7 +1979,7 @@
                                 android:id="@+id/TextViewArgentFournitures"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/textAntivirus"
+                                android:text="1500"
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="10dp"
                                 android:layout_toEndOf="@+id/ImageViewArgentFournitures"
@@ -2070,7 +2071,7 @@
                                 android:layout_toEndOf="@+id/ImageViewArgentMedecinTravail"
                                 android:textSize="25sp"/>
 
-                            <ProgressBar
+                            <!--<ProgressBar
                                 android:id="@+id/ProgressBarMedecinTravail"
                                 style="@android:style/Widget.ProgressBar.Horizontal"
                                 android:progressDrawable="@drawable/custom_progress_bar_formation_employes"
@@ -2083,7 +2084,27 @@
                                 android:layout_toEndOf="@+id/TextViewArgentMedecinTravail"
                                 android:max="100"
                                 android:progress="65"
-                                android:alpha="1"/>
+                                android:alpha="1"/>-->
+
+                            <TextView
+                                android:id="@+id/TextViewDerniereInterventionMedecinTravail"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="derniere intervention : "
+                                android:layout_toEndOf="@+id/TextViewArgentMedecinTravail"
+                                android:layout_centerVertical="true"
+                                android:layout_marginStart="30dp"
+                                android:textSize="25sp"/>
+
+                            <TextView
+                                android:id="@+id/TextViewHeureDerniereInterventionMedecinTravail"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="pas encore effectuee"
+                                android:layout_toEndOf="@+id/TextViewDerniereInterventionMedecinTravail"
+                                android:layout_marginStart="5dp"
+                                android:layout_centerVertical="true"
+                                android:textSize="25sp"/>
 
                             <ImageButton
                                 android:id="@+id/ImageButtonHelpMedecinTravail"
@@ -2092,7 +2113,7 @@
                                 android:src="@drawable/help"
                                 android:layout_centerVertical="true"
                                 android:layout_alignParentEnd="true"
-                                android:layout_toEndOf="@+id/ProgressBarMedecinTravail"
+                                android:layout_toEndOf="@+id/TextViewHeureDerniereInterventionMedecinTravail"
                                 android:background="@color/colorBackgroundRelativeLayoutEmployes"/>
 
                             <RelativeLayout
@@ -2116,7 +2137,7 @@
                                 android:id="@+id/TextViewMenage"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/miseAJourSysteme"
+                                android:text="MENAGE"
                                 android:textSize="25sp"
                                 android:layout_centerVertical="true"/>
 
@@ -2143,7 +2164,7 @@
                                 android:id="@+id/TextViewArgentMenage"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/textMIseAJourSysteme"
+                                android:text="100"
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="10dp"
                                 android:layout_toEndOf="@+id/ImageViewArgentMenage"
@@ -2153,17 +2174,17 @@
                                 android:id="@+id/TextViewDernierMenage"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/derniereMenage"
+                                android:text="dernier passage : "
                                 android:layout_toEndOf="@+id/TextViewArgentMenage"
                                 android:layout_centerVertical="true"
                                 android:layout_marginStart="10dp"
                                 android:textSize="20sp"/>
 
                             <TextView
-                                android:id="@+id/TextViewHeureDerniereMenage"
+                                android:id="@+id/TextViewHeureDernierMenage"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/heureMenage"
+                                android:text="pas encore effectue"
                                 android:layout_toEndOf="@+id/TextViewDernierMenage"
                                 android:layout_marginStart="5dp"
                                 android:layout_centerVertical="true"
@@ -2176,7 +2197,7 @@
                                 android:src="@drawable/help"
                                 android:layout_centerVertical="true"
                                 android:layout_alignParentEnd="true"
-                                android:layout_toEndOf="@+id/TextViewHeureDerniereMenage"
+                                android:layout_toEndOf="@+id/TextViewHeureDernierMenage"
                                 android:background="@color/colorBackgroundRelativeLayoutEmployes"/>
 
                             <RelativeLayout
@@ -2279,7 +2300,7 @@
                                 android:background="@color/colorBackgroundRelativeLayoutEmployes"
                                 android:src="@drawable/up" />
 
-                            <ImageView
+                            <!--<ImageView
                                 android:id="@+id/ImageViewArgentFelicitation"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -2316,14 +2337,13 @@
                                 android:layout_toEndOf="@+id/TextViewPossibilite"
                                 android:layout_marginStart="5dp"
                                 android:layout_centerVertical="true"
-                                android:textSize="25sp"/>
-
+                                android:textSize="25sp"/>-->
 
                             <ImageButton
                                 android:id="@+id/ImageButtonHelpFelicitation"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_alignEnd="@+id/TextViewArgentFelicitation"
+                                android:layout_alignEnd="@+id/ImageButtonUpFelicitation"
                                 android:layout_alignParentEnd="true"
                                 android:layout_marginEnd="5dp"
                                 android:background="@color/colorBackgroundRelativeLayoutEmployes"
@@ -3223,7 +3243,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
                     android:layout_marginStart="50dp"
-                    android:text="10000"
+                    android:text="0"
                     android:textColor="@color/fontColor"
                     android:textSize="15sp" />
             </RelativeLayout>
